CREATE TABLE `osmanagerdb`.`categoria_servico` (
  `categoria_servico_id` INT NOT NULL AUTO_INCREMENT,
  `nome` VARCHAR(100) NOT NULL,
  PRIMARY KEY (`categoria_servico_id`)
);
