CREATE TABLE `osmanagerdb`.`telefone` (
    `telefone_id` INT NOT NULL AUTO_INCREMENT,
    `ddd` VARCHAR(10) NOT NULL,
    `numero` VARCHAR(20) NOT NULL,
    PRIMARY KEY (`telefone_id`)
);
